# saga-cpp-legacy-projects

applications/FAUST/: CMakeLists.txt  INSTALL  Makefile  README
applications/FAUST/FAUST.xcodeproj/: oweidner.mode1v3  oweidner.pbxuser  project.pbxproj
applications/FAUST/agent/: CMakeLists.txt  agent.cpp  agent.hpp  main.c  main.cpp  query_system.cpp  query_system.hpp  system_monitor.cpp  system_monitor.hpp
applications/FAUST/agent/monitor/: directories.cpp  directories.hpp  monitor.cpp  monitor.hpp  monitor_group.cpp  monitor_group.hpp
applications/FAUST/docs/apidoc/: Doxyfile  mainpage.h  makedoc.sh  publish.sh
applications/FAUST/docs/figures/: UML_resource.graffle  data_dependencies.graffle
applications/FAUST/docs/figures/faust_agents_01.graffle/: data.plist
applications/FAUST/docs/figures/faust_agents_01.graffle/QuickLook/: Thumbnail.tiff
applications/FAUST/docs/manual/: Makefile  faust.bib  faust.tex  faust_implementation.tex  faust_include.tex  faust_stuff.tex
applications/FAUST/docs/manual/figures/: comm_dependencies.graffle  data_dependencies.graffle
applications/FAUST/docs/manual/figures/faust_agents_01.graffle/: data.plist  image6.tiff
applications/FAUST/docs/manual/figures/faust_agents_01.graffle/QuickLook/: Thumbnail.tiff
applications/FAUST/examples/: CMakeLists.txt  ex01.cpp
applications/FAUST/faust/: CMakeLists.txt  Makefile  faust.hpp  main.cpp  manyjobs.hpp
applications/FAUST/faust/faust/: defines.hpp  dependency.hpp  description.cpp  description.hpp  exception.hpp  exports.hpp  job.cpp  job.hpp  job_group.cpp  job_group.hpp  logwriter.cpp  object.cpp  object.hpp  protocol.hpp  resource.cpp  resource.hpp  resource_description.cpp  resource_description.hpp  resource_monitor.cpp  resource_monitor.hpp  service.cpp  service.hpp  state.hpp  version.cpp  version.hpp
applications/FAUST/faust/faust/manyjobs/: description.cpp  description.hpp  job.cpp  job.hpp  job_group.cpp  job_group.hpp  resource.hpp  service.cpp  service.hpp  state.hpp
applications/FAUST/faust/impl/: description_impl.cpp  description_impl.hpp  job_dag.cpp  job_dag.hpp  job_group_impl.cpp  job_group_impl.hpp  job_impl.cpp  job_impl.hpp  logwriter.cpp  logwriter.hpp  object_impl.cpp  object_impl.hpp  resource_description_impl.cpp  resource_description_impl.hpp  resource_impl.cpp  resource_impl.hpp  resource_monitor_impl.cpp  resource_monitor_impl.hpp  service_impl.cpp  service_impl.hpp
applications/FAUST/faust/impl/detail/: serialize.hpp
applications/FAUST/faust/impl/manyjobs/: job_group_impl.cpp  job_group_impl.hpp  job_impl.cpp  job_impl.hpp  service_impl.cpp  service_impl.hpp
applications/FAUST/faust/manyjobs/: description.cpp  description.hpp  job.cpp  job.hpp  job_group.hpp  service.cpp  service.hpp
applications/FAUST/misc/: commands.txt
applications/FAUST/misc/resource_descriptions/: linuxbox.faust  macpro01.cct.lsu.edu.faust
applications/mandelbrot/: CONTACT  LICENSE  Makefile  PACKAGE  README  configure  configure.in  mandelbrot.ini  mandelbrot_backend.ini  version.hpp
applications/mandelbrot/client/: Makefile  client.cpp  logger.cpp  logger.hpp  mandelbrot_client.cpp
applications/mandelbrot/config/: Makefile  make.cfg.base  make.cfg.in  saga_ft.m4  saga_png.m4  saga_pngwriter.m4  saga_x11.m4
applications/mandelbrot/debug_advert/client/: Makefile  client.cpp  logger.hpp
applications/mandelbrot/debug_advert/master/: Makefile  master.cpp
applications/mandelbrot/demo/: Makefile  create_tunnel.sh  demo.css  demo.ini  demo.mk  demo2html.pl  mandelbrot.ini  run-demo.sh  run_demo.sh  show_demos.pl  stop_demo.sh
applications/mandelbrot/demo-fg/: Makefile  demo.ini  run-demo-fg.sh  stop_demo.sh
applications/mandelbrot/demo-gin/: Makefile  demo.css  demo.ini  demo2html.pl  run-demo-gin.sh
applications/mandelbrot/demo-tg/: demo.ini  run_demo.sh
applications/mandelbrot/demo-xsede/: Makefile  demo.ini  run-demo-xsede.sh  run_demo.sh  stop-demo.sh
applications/mandelbrot/master/: Makefile  client.cpp  client.hpp  endpoint.cpp  endpoint.hpp  job_starter.cpp  job_starter.hpp  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_master.cpp  master.cpp  output_base.hpp  output_png.cpp  output_png.hpp  output_x11.cpp  output_x11.hpp
applications/mandelbrot/master/pngwriter/: Makefile  pngwriter.cpp  pngwriter.mk
applications/migol/adaptors/trunk/: Makefile  configure  configure.in
applications/migol/adaptors/trunk/config/: Makefile  config.hpp  config.hpp.in  make.cfg  make.cfg.in  saga.config.openssl.c.mk  saga.config.openssl.c.mk.in  saga.config.postgresql.c.mk  saga.config.postgresql.c.mk.in  saga.config.soci.c.mk  saga.config.soci.c.mk.in  saga.config.sqlite3.c.mk  saga.config.sqlite3.c.mk.in  saga.config.xmlrpc.c.mk  saga.config.xmlrpc.c.mk.in  saga_openssl.m4  saga_postgresql.m4  saga_soci.m4  saga_sqlite3.m4  saga_xmlrpc.m4
applications/migol/adaptors/trunk/cpr/: Makefile  Makefile.linux  Makefile.linux_x64  Makefile.mac  Monitorable.h  Monitorable_service.h  README  common_helpers.hpp  config.h  config.hpp  cpr_checkpoint.cpp  cpr_checkpoint.hpp  cpr_context.cpp  cpr_context.hpp  cpr_directory.cpp  cpr_directory.hpp  cpr_job.cpp  cpr_job.hpp  cpr_job_service.cpp  cpr_job_service.hpp  migol.cpp  migol.hpp  migol_cpr_adaptor.cpp  migol_cpr_adaptor.hpp  migol_cpr_adaptor.ini  monitor.nsmap  monitorC.cpp  monitorH.h  monitorMonitorablePortTypeSOAPBindingObject.h  monitorServer.cpp  monitorStub.h  stdsoap2.cpp  stdsoap2.h
applications/migol/adaptors/trunk/cpr/.depend/: cpr_checkpoint.d  cpr_context.d  cpr_directory.d  cpr_job_service.d  migol.d  migol_cpr_adaptor.d  monitorC.d  monitorServer.d  stdsoap2.d
applications/migol/adaptors/trunk/project/XCode/saga_migol_adaptor.xcodeproj/: luckow.mode1v3  luckow.pbxuser  oweidner.mode1v3  oweidner.pbxuser  oweidner.perspective  project.pbxproj
extenci/: link_to_xsede_osg_guide
gsoc-08/: The_Glueing_Service_User_Manual.docx
misc/: SAGA Helvetica Logo Grey.xcf  SAGA Helvetica Logo.psd  SAGA Helvetica Logo.xcf  SAGA Slide Template.pptx
papers/: README  saga-related.bib  saga.bib  (+2 more)
(+3505 files in other folders)
