# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])
m4_include([config/saga_png.m4])
m4_include([config/saga_ft.m4])
m4_include([config/saga_pngwriter.m4])
m4_include([config/saga_x11.m4])

AC_INIT()

AX_SAGA_CONFIG()

AX_SAGA_CHECK_LIBPNG()
AX_SAGA_CHECK_LIBPNGWRITER()
AX_SAGA_CHECK_LIBFT()
AX_SAGA_CHECK_LIBX11()

# create output files
AC_CONFIG_FILES([config/make.cfg])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                   " >> $OUT
echo " ========================================================          " >> $OUT
echo " SAGA Mandelbrot - Configuration Summary                           " >> $OUT
echo " ========================================================          " >> $OUT
echo "                                                                   " >> $OUT
echo " Mandelbrot                                                        " >> $OUT
echo "   Version               : $SAGA_LIB_VERSION                       " >> $OUT
echo "                                                                   " >> $OUT
echo " SAGA Core                                                         " >> $OUT
echo "   Prefix                : $SAGA_LOCATION                          " >> $OUT
echo "   Version               : $SAGA_VERSION                           " >> $OUT
echo "                                                                   " >> $OUT
echo " PNG                                                               " >> $OUT
echo "   LIBPNG_SOURCE         : $LIBPNG_SOURCE                          " >> $OUT  
echo "   LIBPNG_LOCATION       : $LIBPNG_LOCATION                        " >> $OUT    
echo "   LIBPNG_CPPFLAGS       : $LIBPNG_CPPFLAGS                        " >> $OUT    
echo "   LIBPNG_LDFLAGS        : $LIBPNG_LDFLAGS                         " >> $OUT   
echo "                                                                   " >> $OUT
echo " FREETYPE                                                          " >> $OUT
echo "   LIBFT_SOURCE          : $LIBFT_SOURCE                           " >> $OUT  
echo "   LIBFT_LOCATION        : $LIBFT_LOCATION                         " >> $OUT    
echo "   LIBFT_CPPFLAGS        : $LIBFT_CPPFLAGS                         " >> $OUT    
echo "   LIBFT_LDFLAGS         : $LIBFT_LDFLAGS                          " >> $OUT   
echo "                                                                   " >> $OUT
echo " PNGWRITER                                                         " >> $OUT
echo "   LIBPNGWRITER_SOURCE   : $LIBPNGWRITER_SOURCE                    " >> $OUT  
echo "   LIBPNGWRITER_LOCATION : $LIBPNGWRITER_LOCATION                  " >> $OUT    
echo "   LIBPNGWRITER_CPPFLAGS : $LIBPNGWRITER_CPPFLAGS                  " >> $OUT    
echo "   LIBPNGWRITER_LDFLAGS  : $LIBPNGWRITER_LDFLAGS                   " >> $OUT   
echo "                                                                   " >> $OUT
echo " X11                                                               " >> $OUT
echo "   LIBX11_SOURCE         : $LIBX11_SOURCE                          " >> $OUT  
echo "   LIBX11_LOCATION       : $LIBX11_LOCATION                        " >> $OUT    
echo "   LIBX11_CPPFLAGS       : $LIBX11_CPPFLAGS                        " >> $OUT    
echo "   LIBX11_LDFLAGS        : $LIBX11_LDFLAGS                         " >> $OUT   
echo "                                                                   " >> $OUT
echo "                                                                   " >> $OUT
echo " ========================================================          " >> $OUT
echo "                                                                   " >> $OUT

cat $OUT

