# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
# 
# Distributed under the Boost Software License, Version 1.0. 
# (See accompanying Afile LICENSE_1_0.txt or copy at 
#  http://www.boost.org/LICENSE_1_0.txt)
# TODO: add JNI detection

# find saga.m4

m4_include([saga.m4])

m4_include([config/saga_openssl.m4])

AC_INIT()

AX_SAGA_CONFIG()

AX_SAGA_CHECK_OPENSSL(0.9.6)

AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([config/saga.config.openssl.c.mk])
AC_CONFIG_FILES([config/config.hpp])

AC_OUTPUT()
